# arangoimport

./: .gitignore  MIGRATION_ANALYSIS.md  Makefile  README.md  SPOKE metapaths - signatures - Sheet1.tsv  SPOKE_dataset_README.md  analyze_duplicates.py  arangodb_graphstore_indexing.md  arangoimport_troublehshooting.md  docker-compose.yml  pyarango.collection.py  pyproject.toml  spoke_database_analysis.md
docs/: README.md
docs/case_studies/: README.md
docs/case_studies/spoke/: README.md  backup_and_deployment.md
docs/general/: README.md  api.md  configuration.md  installation.md  usage.md
docs/migration/: README.md  best_practices.md  neo4j_to_arango.md  overview.md
examples/: tutorial.py
roadmap/: generalization_roadmap.md
roadmap/_status_updates/: 2025-04-05-debug-multiprocessing-connection-error.md  2025-04-09-architecture-review-generalization-plan.md  2025-04-12-spoke-database-import.md  _status_offboarding.md  _status_onboarding.md
scripts/: add_indexes.py  add_remaining_indexes.py  analyze_missing_edges.py  backup_spoke_database.sh  comprehensive_indexing.py  diagnose_missing_nodes.py  edge_focused_import_25p.sh  examine_missing_nodes.py  final_import_25p.sh  fresh_start_import.sh  fresh_start_import_25p.sh  monitor_import.sh  optimize_logs.sh  rerun_import_with_enhanced_logging.sh  spoke_import_25p.sh
src/arangoimport/: __init__.py  cli.py  config.py  connection.py  enhanced_logging.py  id_mapping.py  importer.py  log_config.py  logging.py  monitoring.py  quality.py  utils.py  validation.py
src/arangoimport/providers/: __init__.py  base.py
src/arangoimport/providers/spoke/: adapters.py  config.py  transformers.py
tests/: __init__.py  conftest.py  test_cli.py  test_connection.py  test_id_mapping.py  test_import_config.py  test_importer.py  test_utils.py
