[project]
name = "arangoimport"
version = "0.1.7"
authors = [
    { name = "Trent Leslie", email = "trent.leslie@phenomehealth.com" },
]
description = "A high-performance tool for importing Neo4j JSONL graph data exports into ArangoDB"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "python-arango>=7.5.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "pyarango>=2.0.1",
    "python-dotenv>=1.0.0",
    "ijson>=3.2.3",
]

[tool.poetry.dependencies]
python = "^3.11"
pyarango = "^2.0.1"
python-dotenv = "^1.0.0"
ijson = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-watch = ">=4.2.0"
mypy = ">=1.0.0"
ruff = ">=0.1.0"
types-psutil = ">=5.9.0"
types-tqdm = "^4.67.0.20241221"

[project.scripts]
arangoimport = "arangoimport.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=arangoimport --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "TCH", # type-checking
    "TID", # tidy imports
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = ["redundant-expr"]
strict = true